# nobleo_socketcan_bridge

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  perf.data  perf.data.old
.github/workflows/: industrial_ci_action.yml
include/nobleo_socketcan_bridge/: socketcan_bridge.hpp  socketcan_bridge_node.hpp
include/ros2_socketcan_bridge/: socketcan_bridge.hpp  socketcan_bridge_node.hpp
src/: socketcan_bridge.cpp  socketcan_bridge_ee.cpp  socketcan_bridge_node.cpp
test/: benchmark.launch.xml  comparison.launch.xml  unittests.cpp
