<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
Copyright (C) 2024 Nobleo Technology B.V.

SPDX-License-Identifier: Apache-2.0
-->

<package format="3">
  <name>nobleo_socketcan_bridge</name>
  <version>0.0.0</version>
  <description>Simple wrapper around SocketCAN</description>
  <maintainer email="ramon.wijnands@nobleo.nl">Ramon Wijnands</maintainer>
  <license>TODO: License declaration</license>
  <author email="ramon.wijnands@nobleo.nl">Ramon Wijnands</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_ros</depend>
  <depend>can_msgs</depend>
  <depend>fmt</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>

  <!-- Linters -->
  <test_depend>ament_cmake_clang_format</test_depend>
  <!-- <test_depend>ament_cmake_clang_tidy</test_depend> -->
  <!-- <test_depend>ament_cmake_copyright</test_depend> -->
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
