<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
Copyright (C) 2024 Nobleo Technology B.V.

SPDX-License-Identifier: Apache-2.0
-->

<package format="3">
  <name>nobleo_socketcan_bridge</name>
  <version>1.0.1</version>
  <description>Simple wrapper around SocketCAN</description>
  <maintainer email="ramon.wijnands@nobleo.nl">Ramon Wijnands</maintainer>
  <license>Apache-2.0</license>
  <author email="ramon.wijnands@nobleo.nl">Ramon Wijnands</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_ros</build_depend>

  <depend>can_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>fmt</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>

  <!-- Linters -->
  <test_depend condition="$ROS_DISTRO != humble">ament_cmake_clang_format</test_depend>
  <!-- <test_depend>ament_cmake_clang_tidy</test_depend> -->
  <!-- <test_depend>ament_cmake_copyright</test_depend> -->
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
